--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,24 @@
-/*
+.canva-embed__wrapper {
+	position: relative;
+	width: 100%;
+	height: 0;
+	padding-top: 100%;
+	padding-bottom: 0;
+	box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0.16);
+	margin-top: 1.6em;
+	margin-bottom: 0.9em;
+	overflow: hidden;
+	border-radius: 8px;
+	will-change: transform;
+}
 
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
-
-If your plugin does not need CSS, delete this file.
-
-*/
+.canva-embed__iframe {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	border: none;
+	padding: 0;
+	margin: 0;
+}
