--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
 	position: relative;
 	width: 100%;
 	height: 0;
-	padding-top: 100%;
 	padding-bottom: 0;
 	box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0.16);
 	margin-top: 1.6em;
@@ -21,4 +20,34 @@
 	border: none;
 	padding: 0;
 	margin: 0;
+}
+
+.canva-embed__error {
+	background-color: rgb(91, 20, 20);
+
+	border: 3px solid black;
+}
+.canva-embed__error-title {
+	line-height: 1;
+	font-size: 2em;
+	padding-left: 20px;
+	padding-right: 20px;
+	font-weight: bold;
+}
+.canva-embed__error-url {
+	font-family: monospace;
+	font-size: 1.2em;
+	padding-left: 20px;
+	padding-right: 20px;
+	white-space-collapse: preserve;
+	font-size: 0.8em;
+}
+
+.canva-embed__error-legend {
+	font-weight: 500;
+	text-transform: uppercase;
+	text-align: center;
+	line-height: 1.25;
+	background: red;
+	margin-bottom: 20px;
 }
