--- a/packages/plugin/src/embed-styling.scss
+++ b/packages/plugin/src/embed-styling.scss
@@ -5,6 +5,7 @@
 		height: 0;
 		padding-bottom: 0;
 		box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0.16);
+		margin: auto;
 		margin-top: 1.6em;
 		margin-bottom: 0.9em;
 		overflow: hidden;
